2009-12-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex.c: Remove extern declaration of gettexstring(),
	now in ../web2c/coerce.h.

2009-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	synctex-e-mem.ch0 (just_reverse): Drop unused label found.

2009-09-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex.c (synctex_suffix*): Constify strings.
	Add #include "synctex.h" for prototypes.
	* synctex.h (synctexabort): Add prototype.
	* synctex_main.c (synctex_help*): Constify string params.
	(synctex_edit_proceed): Add a prototype (was a duplicate for
	synctex_view_proceed). Drop cast.
	* synctex_parser_utils.[ch] (_synctex_error): Constify string
	param.

2009-09-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: Prepare compiler warnings.

2009-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: SyncTeX now integrated into ../texmfmp.h.
	* synctex-convert.sh (removed): Obsolete.

2009-07-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c: re-#include "web2c/c-auto.h", needed for AIX.

2009-07-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: remove INSTALL.

2009-07-13  Jerome Laurens  <jerome.laurens@u-bourgogne.fr>

	No need to rebuild the binaries with these changes.
	* INSTALL: the content has no meaning with the new building architecture, file removed.
	* synctex_parser*: version number changed to 1.8
	* synctex_main.c: version number updated to 1.2 (2 typos)

2009-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: remove unused files Makefile, Makefile.in.

2009-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c: make 'synctex help update' work as advertised.
	* tests/LM-Volume-manuscript.tex: Mac -> native line ends.

2009-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: distribute new files.
	* synctex_parser_local.h: add newline at end of file.
	* synctex_parser_readme.txt: Mac -> native line ends.
